@@ -1,1 +1,2 @@
 # AD_CLASE
+Add VM options: --module-path "C:\Program Files\Java\javafx-sdk-23\lib" --add-modules javafx.controls,javafx.fxml
